--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ imageio==2.32.0
 imageio-ffmpeg==0.4.8
 imagesize==1.4.1
 imgaug==0.4.0
+imutils==0.5.4
 importlib-metadata==4.12.0
 importlib-resources==5.10.2
 iniconfig==2.0.0
@@ -76,6 +77,7 @@ marshmallow==3.20.1
 matplotlib==3.5.1
 matplotlib-inline==0.1.3
 mdurl==0.1.2
+mediapipe==0.8.10.1
 ml-dtypes==0.2.0
 nltk==3.8.1
 notebook==6.5.3
@@ -109,6 +111,10 @@ python-dateutil==2.8.2
 python-dotenv==1.0.0
 python-json-logger==2.0.7
 python-multipart==0.0.6
+requests==2.26.0
+requests-file==1.5.1
+requests-oauthlib==1.3.1
+requests-toolbelt==0.9.1
 safetensors==0.3.1
 scikit-image==0.22.0
 scikit-learn==1.3.1
